# KS-1Q

./: README.md  README_enus.md  README_zhcn.md
documents/: KS-1Q_icd_zhcn_20160929_public.doc
firmware/: KS1_EPS_FW_ChangeLog_zhcn.txt  TTC_V04_FW_ChangeLog_zhcn.txt
firmware/KS01_EPS_FW03/IAR/: EPS.eww
firmware/KS01_EPS_FW03/User/: FreeRTOSConfig.h  bsp.c  ledtlm.c  main.c  syscall_printf.c
firmware/KS01_EPS_FW03/modules/: ntc.c  ntc_smd.h
firmware/KS1_EPS_FW02/IAR/: EPS.dep  stm32f105xC.icf
firmware/KS1_EPS_FW02/User/: bsp.h  loop.c
firmware/KS1_EPS_FW02/modules/: ADXL345.c  ADXL345.h  ntc.h  ntc_thru.h  tlv2548.h
firmware/KS1_EPS_FW03/IAR/: EPS.ewd  EPS.ewp  EPS.ewt  stm32f105xB.icf
firmware/KS1_EPS_FW03/User/: config.h  ledtlm.h  loop.h  main - 副本.c  stm32f10x_it.c  stm32f10x_it.h  system.c
firmware/KS1_EPS_FW03/modules/: tlv2548.c
firmware/OBC_2D_FW02/app/: FreeRTOSConfig.h  bsp.h  camshot_thread.h  ftp_thread.h  imumagd.c  main.c  main.h  stm32f4xx_it.c
firmware/OBC_2D_FW02/iar/: obc_v2.ewd  obc_v2.ewt  obc_v2.icf
firmware/OBC_2D_FW03/app/: bsp.c  camshot_thread.c  camshot_thread_sdwrite.c  config.h  fdr.c  fdr.h  ftp_thread.c  imumagd.h  memory_thread.c  memory_thread.h
firmware/OBC_2D_FW03/iar/: obc_v2.dep  obc_v2.ewp  obc_v2.eww
firmware/TTC_V04_FPGA/: README_zhcn.txt  test_4463andcpuopration.prjx
firmware/TTC_V04_FPGA/firmware/: README.txt  test_4463andcpuopration_cmsis_svd.xml  test_4463andcpuopration_hw_platform.h
firmware/TTC_V04_FPGA/hdl/: APB_V3_CPU_R_HDL_W.V  APB_v2_CPU_W_HDL_R.v  ASM_Generato.v  CLTU.v  CPU_W_HDL_R.v  Convolutional_Encoder.v  DATA_OUT.v  Glue_Logic.v  Glue_Logic_Rx_DataFinish.v  HDL_W_CPU_R_BUFF (复件).v  RSControl.v  RXRandomizer.v  Record_Data.v  Switch.v  TC_Decode (复件).v  TM_CRC32.v  Timer_Clear.v  crc_soft.v  crc_soft_text.v  data_gene.v  divider.v  divider_2.v  ip_packet.v  parallel_to_serial.v  randomizer.v  reboot.v  rec.v  rest.v  soft_crc32.v  text_rest.v
firmware/TTC_V04_FPGA/simulation/: CM3_compile_bfm.tcl  bfmtovec.lin  bfmtovec_compile.tcl  coreapb3_usertb_master.bfm  coreapb3_usertb_master.vec  modelsim.ini  modelsim.ini.sav  run.do  subsystem.bfm  test.bfm  test.vec
firmware/TTC_V04_FPGA/smartgen/: DESIGN_FIRMWARE_work.ixf  TM_RSENC_work.ixf  smartgen.aws  test_4463andcpuopration_MSS_work.ixf  test_4463andcpuopration_work.ixf
firmware/TTC_V04_FPGA/synthesis/: flatsch.sxr  fsmviewer.fsm  rpt_test_4463andcpuopration.areasrr  rpt_test_4463andcpuopration_areasrr.htm  run_options.txt  scratchproject.prs  synlog.tcl  test_4463andcpuopration.edn  test_4463andcpuopration.fse  test_4463andcpuopration.htm  test_4463andcpuopration.sap  test_4463andcpuopration.srd  test_4463andcpuopration.srm  test_4463andcpuopration.srr  test_4463andcpuopration.srs  test_4463andcpuopration.v  test_4463andcpuopration_scck.rpt  test_4463andcpuopration_sdc.sdc  test_4463andcpuopration_syn.bak  test_4463andcpuopration_syn.prj  test_4463andcpuopration_syn.tcl  test_4463andcpuopration_synplify.fdc
firmware/TTC_V04_FPGA/tooldata/: PlannerProjectSettings.ini  test_4463andcpuopration.msg  test_4463andcpuopration_tools.xml
firmware/binary/: KS1_EPS_FW02_161102.hex  OBC_2D_FW03.hex  TTC_V04_FW00_161103_final.hex  TTC_V04_FW01_170707_wdogfix.hex
hardware/: TTC_V04_TODO.txt
host/DM/: dm_data.h~  dm_data_eps.h  dm_data_obc.h~  dm_data_ttc.h  dm_data_ttc.h~
host/KS1GCS/: .gitignore  KS1GCS.pro  README.txt  ccsds-halfduplex-tcpserver2.py  csploop.cpp  csploop.h  dm_data_eps.h  dm_data_obc.h  dm_data_ttc.h  dm_gcs.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc
host/NTCTest/: .gitignore  NTC2.m  build.sh  build.sh~  ntc.c~  ntc_smd.h  ntc_smd.h~  ntc_thru.h~  ntc_ttc.h  ntctest  ntctest.c  ntctest.c~
host/WebAPI/: README.md
host/csp/: build_csp.sh  install_csp.sh  uninstall_csp.sh
host/gr-kcsa-ks1q/: CMakeLists.txt  MANIFEST.md
host/gr-kcsa-ks1q/grc/: CMakeLists.txt  kcsa_afsk1200_raw_rx.xml  kcsa_ax25_debug.xml  kcsa_ber_sink.xml  kcsa_ber_source.xml  kcsa_byte_interpolator.xml  kcsa_ccsds_tc.xml  kcsa_ccsds_udp_tc.xml  kcsa_clock_recovery_gardner_xx.xml  kcsa_encode27_bb.xml  kcsa_fec_decode_b.xml  kcsa_fec_encode_b.xml  kcsa_framesync.xml  kcsa_fullduplex_pdu_to_stream.xml  kcsa_gating_cbc.xml  kcsa_gmsk_demod.xml  kcsa_halfduplex_pdu_to_stream.xml  kcsa_halfduplex_tc.xml  kcsa_kiss_server.xml  kcsa_pdu_to_stream.xml  kcsa_pdu_to_stream2.xml  kcsa_power_sensor.xml  kcsa_psk_rx.xml  kcsa_sync_det_b.xml  kcsa_vitfilt27_bb.xml  kcsa_vitfilt27_fb.xml
host/gr-kcsa-ks1q/include/kcsa/: CMakeLists.txt  afsk1200_raw_rx.h  api.h  ax25_debug.h  ber_sink.h  ber_source.h  byte_interpolator.h  ccsds_tc.h  ccsds_udp_tc.h  clock_recovery_gardner_cc.h  clock_recovery_gardner_ff.h  encode27_bb.h  fec_decode_b.h  fec_encode_b.h  framesync.h  fullduplex_pdu_to_stream.h  gating_cbc.h  halfduplex_pdu_to_stream.h  halfduplex_tc.h  kiss_server.h  pdu_to_stream.h  pdu_to_stream2.h  power_sensor.h  psk_rx.h  sync_det_b.h  vitfilt27_bb.h  vitfilt27_fb.h
host/gr-kcsa-ks1q/lib/: CMakeLists.txt  afsk1200_raw_rx_impl.cc  afsk1200_raw_rx_impl.h  ax25_debug_impl.cc  ax25_debug_impl.h  ber_sink_impl.cc  ber_sink_impl.h  ber_source_impl.cc  ber_source_impl.h  byte_interpolator_impl.cc  byte_interpolator_impl.h  ccsds_tc_impl.cc  ccsds_tc_impl.h  ccsds_udp_tc_impl.cc  ccsds_udp_tc_impl.h  clock_recovery_gardner_cc_impl.cc  clock_recovery_gardner_cc_impl.h  clock_recovery_gardner_ff_impl.cc  clock_recovery_gardner_ff_impl.h  encode27_bb_impl.cc  encode27_bb_impl.h  fec_decode_b_impl.cc  fec_decode_b_impl.h  fec_encode_b_impl.cc  fec_encode_b_impl.h  framesync_impl.cc  framesync_impl.h  framesync_modes.txt  fullduplex_pdu_to_stream_impl.cc  fullduplex_pdu_to_stream_impl.h  gating_cbc_impl.cc  gating_cbc_impl.h  halfduplex_pdu_to_stream_impl.cc  halfduplex_pdu_to_stream_impl.h  halfduplex_tc_impl.cc  halfduplex_tc_impl.h  kiss_server_impl.cc  kiss_server_impl.h  pdu_to_stream2_impl.cc  pdu_to_stream2_impl.h  (+15 more)
host/gr-kcsa-ks1q/lib/ccsds/: ccsds.c  ccsds.h  randomizer.c  rs.c  rs.h
host/gr-kcsa-ks1q/lib/psk/: hb_taps.h  psk_rx_cc.cc  psk_rx_cc.h
(+647 files in other folders)
